--- a/less/homepage.less
+++ b/less/homepage.less
@@ -9,7 +9,7 @@
 
     .jumbotron {
       text-align: center;
-      color: black;
+      color: @black;
       padding-top: 190px;
       line-height: 2;
 
@@ -30,16 +30,20 @@
     align-items: baseline;
 
     @media @mobileScreenSize {
-      width: 100%;
+      width: 90%;
+      text-align: center;
+      margin-left: 20px;
+
+     
     }
 
     a {
       text-decoration: none;
-      color: black;
+      color: @black;
     }
 
     input {
-      background: lighten(grey, 10%);
+      background: lighten(@grey, 10%);
       height: 30px;
     }
   }
@@ -57,7 +61,7 @@
       height: 380px;
       margin: 40px;
       padding-bottom: 140px;
-      border-bottom: 2px solid black;
+      border-bottom: 2px solid @black;
 
       @media @tabletScreenSize {
         width: 250px;
@@ -88,7 +92,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    background: lighten(grey, 30%);
+    background: lighten(@grey, 30%);
 
     .artist-headshot {
       width: 300px;
@@ -132,7 +136,7 @@
       a {
         float: right;
         text-decoration: none;
-        color: black;
+        color: @black;
       }
     }
   }
@@ -167,7 +171,6 @@
         background: lighten(grey, 30%);
 
         @media @mobileScreenSize {
-          color: green;
           width: 100%;
           padding: 25px;
         }
@@ -187,7 +190,7 @@
           font-size: 1.6rem;
           text-align: center;
           padding-top: 100px;
-          color: white;
+          color: @white;
         }
       }
     }
