--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,9 @@
 // Screen sizes
 @mobileScreenSize: ~"(max-width: 500px)";
 @tabletScreenSize: ~"(max-width: 800px)";
+
+
+// Colors
+@black: black;
+@grey: grey;
+@white: white;
